--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       Welcome to my intro to web design presentation. Click Brutus to switch the
       picture.
     </p>
+    
+    <p>
+      Edit the files hightlighted in the layout below to make changes to website."
+    </p>
     <img
       src="images/codesandbox_layout.png"
       alt="codesandbox file system example"
