--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </p>
     
     <p>
-      Edit the files hightlighted in the layout below to make changes to website."
+      Edit the files hightlighted in the layout below to make changes to website.
     </p>
     <img
       src="images/codesandbox_layout.png"
