--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
   <body>
     <h1>COMM4511 is cool</h1>
     <img src="images/brutus1.jpeg" alt="Brutus Buckeye" />
-
+    <!-- 
+      brutus1.jpeg
+    -->
     <p>
-      Welcome to my intro to web design presentation. Click Brutus to switch the
+      Welcome to my intro to web design presentation. Click the picture to switch the
       picture.
     </p>
+    <!--
     
     <p>
       Edit the files hightlighted in the layout below to make changes to website.
@@ -29,13 +32,15 @@
     />
 
     <ul>
+
+    -->
       <!-- changed to list in the tutorial -->
       <li>edit the index.html file to edit text</li>
       <li>tinker with the style.css file to chaneg layout and colors</li>
       <li>edit the main.js file to change the pictures in the click example</li>
     </ul>
 
-    <button>Change user</button>
+    <button>Click here, ya butt </button>
     <script src="scripts/main.js"></script>
   </body>
 </html>
