changes to images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>COMM4511 is cool</h1>
-    <img src="images/brutus1.jpeg" alt="Brutus Buckeye" />
+    <img src="images/jim1.jpg" alt="Brutus Buckeye" />
     <!-- 
       brutus1.jpeg
     -->
